k8s_qwebirc.yaml
##      __        __   _    ___ ____   ____
##   __ \ \      / /__| |__|_ _|  _ \ / ___|
##  / _` \ \ /\ / / _ \ '_ \| || |_) | |
## | (_| |\ V  V /  __/ |_) | ||  _ <| |___
##  \__, | \_/\_/ \___|_.__/___|_| \_\\____|
##     |_|
## 

## qwebirc is a fast, easy to use, free and open source IRC client
## https://qwebirc.org/ & https://github.com/qwebirc/qwebirc/
## https://github.com/Tob1as/docker-qwebirc

#---
#
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: irc

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwebirc
  namespace: irc
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: qwebirc
  template:
    metadata:
      labels:
        app: qwebirc
    spec:
      containers:
        - name: qwebirc
          image: ghcr.io/tob1as/docker-qwebirc:latest
          imagePullPolicy: Always #IfNotPresent 
          ports:
          - containerPort: 9090
            name: qwebirc
            protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 9090
            failureThreshold: 4
            initialDelaySeconds: 15
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9090
            failureThreshold: 4
            initialDelaySeconds: 5
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "512Mi"
              cpu: "0.5"
          volumeMounts:
            - name: qwebirc-conf
              mountPath: /qwebirc/config.py
              subPath: config.py
              readOnly: true
            - name: qwebirc-certs
              mountPath: /ssl
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: qwebirc-conf
          configMap:
            name: qwebirc-conf
        - name: qwebirc-certs
          secret:
            secretName: qwebirc-certs
            #defaultMode: 0644
            optional: true

---

# for nginx-ingress port (9090) settings, example: https://gist.github.com/superseb/ba6becd1a5e9c74ca17996aa59bcc67e
# and: https://github.com/kubernetes/ingress-nginx/blob/main/docs/user-guide/exposing-tcp-udp-services.md
# and: https://github.com/rancher/rancher/issues/14744#issuecomment-1210466472
# OR: use nginx-ingress for qwebirc

apiVersion: v1
kind: Service
metadata:
  name: qwebirc
  namespace: irc
  labels:
    app: qwebirc
spec:
  type: ClusterIP
  ports:
    - name: "qwebirc"
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: qwebirc

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qwebirc
  namespace: irc
  labels:
    app: qwebirc
  annotations:
    ## https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  tls:
  - hosts:
    - irc.example.com
    secretName: ingress-tls-secret
  rules:
  - host: irc.example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: qwebirc
            port:
              #name: qwebirc
              number: 9090
